# jsx-compilation

./: README.md  benchmark.js  compare-implementations.js  index.html  integration-test.js  package.json  pnpm-lock.yaml  test-wasm.js  tsconfig.json  vite-plugin-jsx-compilation-rs.js  vite.config.ts
assets/: index-0dd87a84.css  index-91b50a95.js
jsx-compilation-rs/: Cargo.toml  README.md  build-wasm.sh
jsx-compilation-rs/src/: lib.rs  main.rs  tests.rs  tokenizer.rs  wasm.rs
lib/: jsx-compilation.js  jsx-compilation.umd.cjs
playground/: package.json  pnpm-lock.yaml  test-rust.html  tsconfig.node.json  vite.config.ts
playground/lib/: jsx-compilation.js
playground/src/: App.css  App.tsx  test-wasm.js
src/: TokenReader.ts  ast.ts  evaluate.ts  index.ts  parser.ts  toAST.ts  tokenize.ts  tokenizer.ts
tests/: evaluate.spec.ts  parser.spec.ts  tokenize.spec.ts  tokenizer.spec.ts
