[package]
name = "jsx-compilation-rs"
version = "0.1.0"
edition = "2021"
authors = ["JSX Compilation Team"]
description = "A Rust implementation of JSX tokenization for compilation"
license = "MIT"
repository = "https://github.com/jsx-compilation/jsx-compilation-rs"
keywords = ["jsx", "tokenizer", "compiler", "react", "parsing"]
categories = ["parsing", "web-programming"]

[lib]
name = "jsx_compilation_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = "0.3"

[dependencies.wee_alloc]
version = "0.4"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
